--- a/pantheon2023/package.json
+++ b/pantheon2023/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-countdown": "^2.3.5",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.12.1",
+    "react-scroll": "^1.8.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
