--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,12 +31,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       - name: cd
-        run: cd pantheon2023/
+        run: cd ./pantheon2023/
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
+          cache-dependency-path: './pantehon2023/package-lock.json'
       - name: Install dependencies
         run: npm install
       - name: Build
