--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: 18
           cache: 'npm'
-          cache-dependency-path: './pantehon2023/package-lock.json'
+          cache-dependency-path: ./pantehon2023/package-lock.json
       - name: Install dependencies
         working-directory: node-app
         run: npm install
