--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -40,7 +40,7 @@ jobs:
         working-directory: node-app
         run: npm install
       - name: Build
-        working-directory: node-app
+        working-directory: pantheon2023
         run: npm run build
       - name: Setup Pages
         uses: actions/configure-pages@v3
