--- a/pantheon2023/package.json
+++ b/pantheon2023/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
-    "react-scroll": "^1.8.9"
+    "react-scroll": "^1.8.9",
+    "react-use-keypress": "^1.3.1",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
