--- a/pantheon2023/package.json
+++ b/pantheon2023/package.json
@@ -4,15 +4,17 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host --port 3000",
     "build": "vite build && cp dist/index.html dist/404.html",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "blurhash": "^2.0.5",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
+    "react-blurhash": "^0.3.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
